Updates for ACCUMULO-4528