@@ -15,6 +15,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+{% if accumulo_major_version == '1' %}
 export ACCUMULO_TSERVER_OPTS="-Xmx{{ accumulo_tserv_mem }} -Xms{{ accumulo_tserv_mem }}"
 export ACCUMULO_MASTER_OPTS="-Xmx256m -Xms256m"
 export ACCUMULO_MONITOR_OPTS="-Xmx128m -Xms64m"
@@ -22,16 +23,27 @@ export ACCUMULO_GC_OPTS="-Xmx128m -Xms128m"
 export ACCUMULO_SHELL_OPTS="-Xmx256m -Xms64m"
 export ACCUMULO_GENERAL_OPTS="-XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -Djava.net.preferIPv4Stack=true -XX:+CMSClassUnloadingEnabled"
 export ACCUMULO_OTHER_OPTS="-Xmx256m -Xms64m"
+export ACCUMULO_KILL_CMD='kill -9 %p'
+export NUM_TSERVERS=1
+{% else %}
+JAVA_OPTS=("${ACCUMULO_JAVA_OPTS[@]}" '-XX:+UseConcMarkSweepGC' '-XX:CMSInitiatingOccupancyFraction=75' '-XX:+CMSClassUnloadingEnabled'
+'-XX:OnOutOfMemoryError=kill -9 %p' '-XX:-OmitStackTraceInFastThrow' '-Djava.net.preferIPv4Stack=true' 
+'-Djavax.xml.parsers.DocumentBuilderFactory=com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl')
 
-export JAVA_HOME={{ java_home }}
+case "$ACCUMULO_CMD" in
+master)  JAVA_OPTS=("${JAVA_OPTS[@]}" '-Xmx256m' '-Xms256m') ;;
+gc)      JAVA_OPTS=("${JAVA_OPTS[@]}" '-Xmx128m' '-Xms128m') ;;
+tserver) JAVA_OPTS=("${JAVA_OPTS[@]}" '-Xmx{{ accumulo_tserv_mem }}' '-Xms{{ accumulo_tserv_mem }}') ;;
+monitor) JAVA_OPTS=("${JAVA_OPTS[@]}" '-Xmx128m' '-Xms64m') ;;
+shell)   JAVA_OPTS=("${JAVA_OPTS[@]}" '-Xmx256m' '-Xms64m') ;;
+*)       JAVA_OPTS=("${JAVA_OPTS[@]}" '-Xmx256m' '-Xms64m') ;;
+esac
+export JAVA_OPTS
+{% endif %}
+
+export ACCUMULO_LOG_DIR=$ACCUMULO_HOME/logs
 export HADOOP_PREFIX={{ hadoop_prefix }}
 export HADOOP_CONF_DIR="$HADOOP_PREFIX/etc/hadoop"
 export ZOOKEEPER_HOME={{ zookeeper_home }}
-
-{% if accumulo_major_version == '1' %}
-export ACCUMULO_LOG_DIR=$ACCUMULO_HOME/logs
-# what do when the JVM runs out of heap memory
-export ACCUMULO_KILL_CMD='kill -9 %p'
-#needed for Accumulo 1.8
-export NUM_TSERVERS=1
-{% endif %}
+export JAVA_HOME={{ java_home }}
+export MALLOC_ARENA_MAX=${MALLOC_ARENA_MAX:-1}
